--- a/package.json
+++ b/package.json
@@ -49,10 +49,8 @@
     "webpack-stream": "5.0.0"
   },
   "dependencies": {
-    "@turf/destination": "^6.0.1",
     "chroma-js": "^1.3.7",
     "d3": "^5.7.0",
-    "google-maps": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^4.0.1",
@@ -65,10 +63,6 @@
     "require-uncached": "^1.0.3",
     "smoothscroll-polyfill": "^0.4.3",
     "topojson": "^3.0.2",
-    "topojson-client": "^3.0.0",
-    "topojson-server": "^3.0.0",
-    "topojson-simplify": "^3.0.2",
-    "unfetch": "^3.0.0",
-    "waypoints": "^4.0.1"
+    "unfetch": "^3.0.0"
   }
 }
