--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^4.0.1",
+    "hls.js": "^0.11.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "mustache": "^2.3.0",
     "promise-polyfill": "^6.0.2",
