--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lodash": "^4.17.10",
     "mustache": "^2.3.0",
     "promise-polyfill": "^6.0.2",
+    "ractive": "^1.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "require-uncached": "^1.0.3",
