--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "My title",
+    "title": "Drought and climate change in Australia",
     "docData": "",
-    "path": "20siudheurwir-test"
+    "path": "2018/09/drought-and-climate-change-australia"
 }
