--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     },
     "dependencies": {
         "d3": "^5.7.0",
+        "fetch-ie8": "^1.5.0",
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^0.6.1",
         "gulp-sass": "^4.0.1",
